# Logger

./: .env  Cargo.toml  logger-service.dockerfile
proto/: logger.proto
src/: main.rs
src/file_logger/: logger.rs
src/grpc/: server.rs
src/services/: logger.rs
src/telegram/: telegram.rs
